[package]
name = "geoarrow-viz"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "56.1.0", features = ["prettyprint"] }
geoarrow = "0.5.0"
geoarrow-array = "0.5.0"
geojson = "0.24.2"
geozero = "0.14.0"
reqwest = "0.12.23"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wasm-bindgen = "0.2.101"
wasm-bindgen-test = "0.3.53"
web-sys = { version = "0.3.78", features = ["CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "HtmlElement", "Window"] }
wgpu = "26.0.1"
winit = "0.30.12"

[lib]
crate-type = ["cdylib", "rlib"]
