[package]
name = "basic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
geoarrow-viz = {path = "../../"}
js-sys = "0.3.80"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wasm-bindgen = "0.2.103"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
